[gd_scene load_steps=4 format=3 uid="uid://bj55hvcxpj1bf"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_nmn4w"]
[ext_resource type="FontFile" uid="uid://b4pqfbvte11k6" path="res://Assets/VT323-Regular.ttf" id="2_pa1mr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aaw21"]
bg_color = Color(0.45098, 0.4, 0.152941, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nmn4w")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LifesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_pa1mr")
theme_override_font_sizes/font_size = 69
text = "Lives: 3"

[node name="GameLostContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aaw21")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "You lost, get better, touch grass, L + ratio + bozo + landlubber + no doubloons"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GameOverButton" type="Button" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Restart Game"

[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer/GameOverButton" to="." method="_on_game_over_button_pressed"]
